--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <a href="#" class="logo">Dravid Sanjay</a>
     <nav class="navbar">
       <a href="#home">Home</a>
-      <a href="#about"> About</a>
       <a href="#education">Education</a>
       <a href="#projects">Projects</a>
     </nav>
@@ -29,26 +28,11 @@
         I have also worked in various softwares like figma and more.</p>
     </div>
     <div class="home-sci">
-      <a href="https://www.behance.net/draviducs1914"><i class='bx bxl-behance'></i></a>
+      <a href="https://www.behance.net/dravid_sanjay"><i class='bx bxl-behance'></i></a>
       <a href="https://github.com/Dravid-123"><i class='bx bxl-github'></i></a>
       <a href="https://www.linkedin.com/in/dravid-sanjay/"><i class='bx bxl-linkedin'></i></a>
     </div>
     <div class="home-imgHover"></div>
-  </section>
-
-  <section class="about" id="about">
-    <h2 class="heading">About <span>Me</span></h2>
-    <div class="about-img">
-      <img src="about.jpg" alt="">
-      <span class="cricle-spin"></span>
-    </div>
-    <div class="about-content">
-      <h3>UI/UX Desginer and Frontend Developer!</h3>
-      <p>I am a UI/UX Designer and Frontend developer with working experience in various different technologies and softwares. 
-       <br>I have experience on designing, creating website and mobile app designing. 
-       <br>I have also worked in various softwares like figma and more.</p>
-         </div>
-    </div>
   </section>
 
   <section class="education" id="education">
